# CogStack-ModelServe

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose-auth.yml  docker-compose-celery.yml  docker-compose-dev.yml  docker-compose-log.yml  docker-compose-mlflow.yml  docker-compose-mon.yml  docker-compose-proxy.yml  docker-compose-singlehosts.yml  docker-compose.yml  index.html  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  uv-requirements.in  uv-requirements.txt
.github/workflows/: api-docs.yaml  docker-extra.yaml  docker.yaml  main.yaml  release-gpu.yaml  release.yaml
app/: api.py  config.py  deid_model.py  dependencies.py  domain.py  exception.py  globals.py  logging.ini  main.py  model_services.py  nlpmodel.py  push.py  register.py  registry.py  requirements-dev.txt  requirements.txt  serve.py  setup.py  utils.py
app/api/: api.py  dependencies.py  globals.py  utils.py
app/api/auth/: README.md  backends.py  db.py  users.py
app/api/routers/: authentication.py  evaluation.py  generative.py  health_check.py  invocation.py  mcp.py  metacat_training.py  model_card.py  preview.py  stream.py  supervised_training.py  training_operations.py  unsupervised_training.py
app/auth/: README.md  backends.py  db.py  users.py
app/cli/: README.md  cli.py  parent_dir.py  register.py  serve.py
app/data/: anno_dataset.py  doc_dataset.py
app/envs/: .env
app/management/: README.md  log_captor.py  model_manager.py  prometheus_metrics.py  tracker.py  tracker_client.py
app/mcp/: README.md  __init__.py  domain.py  logger.py  server.py  utils.py
app/mcp/oauth/: middleware.py  oauth.py  routes.py
app/mcp/tools/: __init__.py
app/model_services/: base.py  deid_model.py  hf_transformer_model.py  huggingface_llm_model.py  huggingface_ner_model.py  medcat_model.py  medcat_model_0_3.py  medcat_model_1_2.py  medcat_model_deid.py  medcat_model_icd10.py  medcat_model_opcs4.py  medcat_model_snomed.py  medcat_model_umls.py  nlp_model.py  trainer_base.py  trf_model_deid.py
app/monitoring/: log_captor.py  model_wrapper.py  tracker.py
app/processors/: data_batcher.py  lora_adaptor.py  metrics_collector.py  prefix_cache.py  prompt_factory.py  tagging.py  viterbi_decoder.py
app/routers/: authentication.py  evaluation.py  invocation.py  metacat_training.py  preview.py  static.py  supervised_training.py  training.py  unsupervised_training.py
app/trainer/: base.py  medcat_deid_trainer.py  medcat_trainer.py
app/trainers/: base.py  hf_transformer_trainer.py  huggingface_llm_trainer.py  huggingface_ner_trainer.py  medcat_deid_trainer.py  medcat_trainer.py  metacat_trainer.py
docker/: Dockerfile  README.md
docker/celery/: .env  Dockerfile-Dashboard  Dockerfile-Worker  requirements-dashboard.txt  requirements.txt
docker/de-id/: .env  Dockerfile  requirements.txt
docker/entrypoint/: serve.sh
docker/hf-transformer/: Dockerfile  requirements.txt
docker/huggingface-llm/: .env  Dockerfile  requirements.txt
docker/huggingface-ner/: .env  Dockerfile
docker/medcat-0-3/: Dockerfile  requirements.txt
docker/medcat-1-2/: .env_icd10  .env_snomed  Dockerfile  requirements.txt
docker/medcat-deid/: .dockerignore  .env  Dockerfile  requirements.txt
docker/medcat-icd10/: .env  Dockerfile  requirements.txt
docker/medcat-opcs4/: .env  Dockerfile
docker/medcat-snomed/: .env  Dockerfile  requirements.txt
docker/medcat-umls/: .env  Dockerfile  requirements.txt
docker/medcat_1_2/: Dockerfile
docker/mlflow/: Dockerfile  requirements.txt
docker/mlflow/deployments/: Dockerfile  requirements.txt
docker/mlflow/gateway/: Dockerfile  requirements.txt
docker/mlflow/models/: Dockerfile  (+1 more)
docker/nginx/: Dockerfile
docker/trf-deid/: .env  Dockerfile  requirements.txt
docs/: anoncat_model_apis.html  anoncat_model_apis.json  cogstack_model_serve_apis.html  cogstack_model_serve_apis.json  huggingface_llm_model_apis.html  huggingface_llm_model_apis.json  huggingface_ner_model_apis.html  huggingface_ner_model_apis.json  medcat_deid_model_apis.html  medcat_deid_model_apis.json  medcat_icd10_model_apis.html  medcat_icd10_model_apis.json  medcat_snomed_model_apis.html  medcat_snomed_model_apis.json  medcat_umls_model_apis.html  medcat_umls_model_apis.json  transformers_deid_model_apis.html  transformers_deid_model_apis.json
git-config/hooks/: pre-commit
scripts/: generate_annotations.py  hf_dataset_packager.py  hf_model_packager.py  medcat_concept_diff.py  medcat_config_diff.py  remove_model_version.py  stop_cms_containers
tests/: test_registry.py
tests/app/: conftest.py  helper.py  test_api.py  test_config.py  test_dependencies.py  test_registry.py  test_serve.py  test_serving_deid.py  test_serving_medcat.py  test_serving_nlp.py  test_serving_trf.py  test_utils.py  utils.py
tests/integration/: conftest.py  helper.py  test_steps.py
tests/load/: docker-compose.yml  locustfile.py  requirements.txt
(+131 files in other folders)
