[metadata]
name = cogstack-model-serve
version = 0.0.1
description = A model serving system for CogStack NLP solutions
long_description =  file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/CogStack/CogStack-ModelServe
author = Xi Bai
author_email = baixiac@gmail.com

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    medcat == 1.4.0
    fastapi ~= 0.79.0
    hypercorn ~= 0.13.2
    python-multipart ~= 0.0.5
    ijson ~= 3.1.4
    python-dotenv ~= 0.20.0
    mlflow ~= 1.30.0
    psycopg2-binary ~= 2.9.4
    boto3 ~= 1.24.20
    typer ~= 0.4.1
python_requires = >=3.8

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.extras_require]
test =
    pytest ~= 7.1.2
    pytest-mock ~= 3.7.0
    pytest-timeout ~= 2.1.0
    mypy == 0.950
    flake8 == 4.0.1
    locust ~= 2.11.0
all =
    %(test)s
