[metadata]
name = cogstack-model-serve
version = 0.0.1
description = A model serving system for CogStack NLP solutions
long_description =  file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/CogStack/CogStack-ModelServe
author = Xi Bai
author_email = baixiac@gmail.com

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    medcat == 1.8.0
    fastapi ~= 0.89.1
    uvicorn ~= 0.22.0
    python-multipart ~= 0.0.5
    ijson ~= 3.1.4
    python-dotenv ~= 0.20.0
    mlflow ~= 2.6.0
    psycopg2-binary ~= 2.9.4
    boto3 ~= 1.24.20
    typer ~= 0.4.1
    prometheus-fastapi-instrumentator ~= 5.9.1
    slowapi ~= 0.1.7
    graypy ~= 2.1.0
    fastapi-users ~= 11.0.0
    fastapi-users-db-sqlalchemy ~= 5.0.0
    asyncpg ~= 0.27.0
    aiosqlite ~= 0.19.0
python_requires = >=3.8

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.extras_require]
test =
    pytest ~= 7.1.2
    pytest-mock ~= 3.7.0
    pytest-timeout ~= 2.1.0
    pytest-random-order ~= 1.1.0
    pytest-asyncio ~= 0.21.0
    httpx ~= 0.24.1
    mypy == 1.0.0
    flake8 == 4.0.1
    locust ~= 2.11.0
all =
    %(test)s
